# BlenderExtensionTemplate

./: pyproject.toml
BlenderExtensionTemplate/: serpents_tests.blend
bext_utils/: symlink.py
references/: untitled.blend
